# swagger_server/models/__init__.py
@@ -5,4 +5,3 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.course import Course
 from swagger_server.models.course_list import CourseList
-from swagger_server.models.semester import Semester
