# swagger_server/models/course_list.py
@@ -15,15 +15,21 @@ class CourseList(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self):  # noqa: E501
+    def __init__(self, url: str=None):  # noqa: E501
         """CourseList - a model defined in Swagger
 
+        :param url: The url of this CourseList.  # noqa: E501
+        :type url: str
         """
         self.swagger_types = {
+            'url': str
         }
 
         self.attribute_map = {
+            'url': 'url'
         }
+
+        self._url = url
 
     @classmethod
     def from_dict(cls, dikt) -> 'CourseList':
@@ -35,3 +41,24 @@ class CourseList(Model):
         :rtype: CourseList
         """
         return util.deserialize_model(dikt, cls)
+
+    @property
+    def url(self) -> str:
+        """Gets the url of this CourseList.
+
+
+        :return: The url of this CourseList.
+        :rtype: str
+        """
+        return self._url
+
+    @url.setter
+    def url(self, url: str):
+        """Sets the url of this CourseList.
+
+
+        :param url: The url of this CourseList.
+        :type url: str
+        """
+
+        self._url = url
